--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Remove messages</title>
 </head>
 <body>
-    
+    <script src="./form.js" defer type="module"></script>
+    <script src="./set-ignored-list.js" defer type="module"></script>
+    <script src="./script.js" defer  type="module"></script>
+
+        <input type="text" id="add-ignore-value" />
+        <button  id="add-ignore">Submit</button>
+        <ul id="list-ignored">
+
+        </ul>
+       
 </body>
+
 </html>
